[gd_scene format=3 uid="uid://cfpim1kcb1ss5"]

[ext_resource type="Script" uid="uid://6ffuvtjpugn7" path="res://Investigation Screen/Scripts/investigation.gd" id="1_30crl"]
[ext_resource type="Texture2D" uid="uid://bsatoaewi6dnt" path="res://Investigation Screen/Assets/investigation_background.png" id="2_3pijp"]
[ext_resource type="Texture2D" uid="uid://cf6hlvh5ieo8a" path="res://Investigation Screen/Assets/Mask Assets/mask_background.png" id="3_30crl"]
[ext_resource type="FontFile" uid="uid://bh2r7hp5y63ay" path="res://Global/Fonts/victoria_typewriter/Victoria Typewriter  Bold.ttf" id="4_bseu4"]
[ext_resource type="Texture2D" uid="uid://ctvd8tkhqp8xx" path="res://Investigation Screen/Assets/Mask Assets/yellow_mask.png" id="5_30crl"]
[ext_resource type="PackedScene" uid="uid://coc68b6e6g0wt" path="res://Global/Scenes/time.tscn" id="5_fupvy"]
[ext_resource type="Texture2D" uid="uid://bbur0co8t7ote" path="res://Investigation Screen/Assets/Mask Assets/yellow_mask_selected.png" id="6_3pijp"]
[ext_resource type="Texture2D" uid="uid://bnrvtm7h001jt" path="res://Investigation Screen/Assets/Mask Assets/red_mask.png" id="7_3pijp"]
[ext_resource type="Texture2D" uid="uid://yu5hbjqklbrd" path="res://Investigation Screen/Assets/investigation_table.png" id="8_4qb8l"]
[ext_resource type="Texture2D" uid="uid://xjb4d288vna4" path="res://Investigation Screen/Assets/Mask Assets/red_mask_selected.png" id="8_aoddg"]
[ext_resource type="Texture2D" uid="uid://cl3dafm63foqe" path="res://Investigation Screen/Assets/Mask Assets/blue_mask.png" id="9_bseu4"]
[ext_resource type="Texture2D" uid="uid://cgysmmsbnj6hl" path="res://Investigation Screen/Assets/Mask Assets/blue_mask_selected.png" id="10_fupvy"]
[ext_resource type="Texture2D" uid="uid://2v7bwhs56g02" path="res://Investigation Screen/Assets/Carpet Assets/carpet_flat.png" id="12_30crl"]
[ext_resource type="Texture2D" uid="uid://s4woep3f3hdm" path="res://Investigation Screen/Assets/Carpet Assets/carpet_flat_selected.png" id="13_3pijp"]
[ext_resource type="Texture2D" uid="uid://dsqokl0kk3dg7" path="res://Investigation Screen/Assets/Cat Assets/cat_sleep.png" id="15_aoddg"]
[ext_resource type="Texture2D" uid="uid://d2e4qtajv37tn" path="res://Investigation Screen/Assets/Cat Assets/cat_sleep_selected.png" id="16_bseu4"]
[ext_resource type="Texture2D" uid="uid://dtq74majfokhp" path="res://Investigation Screen/Assets/Clock Assets/clock_early.png" id="17_fupvy"]
[ext_resource type="Texture2D" uid="uid://7yy2bcn7ijvt" path="res://Investigation Screen/Assets/Clock Assets/clock_early_selected.png" id="18_60yht"]
[ext_resource type="Texture2D" uid="uid://ch43evm1lfpkv" path="res://Investigation Screen/Assets/Mirror Assets/mirror_dirty.png" id="19_08hgb"]
[ext_resource type="Texture2D" uid="uid://b8lakb0egh3if" path="res://Investigation Screen/Assets/Mirror Assets/mirror_dirty_selected.png" id="20_4qb8l"]
[ext_resource type="Texture2D" uid="uid://b1eps6iswnrj2" path="res://Investigation Screen/Assets/Glass Assets/glass_half.png" id="21_h6tho"]
[ext_resource type="Texture2D" uid="uid://ddqpuc4igbtrk" path="res://Investigation Screen/Assets/Glass Assets/glass_half_selected.png" id="22_p13pj"]
[ext_resource type="Texture2D" uid="uid://bhai0qdprqthn" path="res://Investigation Screen/Assets/description_box.png" id="23_1xp5b"]
[ext_resource type="Texture2D" uid="uid://d07l4svnvhvul" path="res://Investigation Screen/Assets/Knife Assets/knife_dry.png" id="23_x05a8"]
[ext_resource type="Texture2D" uid="uid://om2i1n56vy7u" path="res://Investigation Screen/Assets/Knife Assets/knife_dry_selected.png" id="24_3gs6n"]
[ext_resource type="PackedScene" uid="uid://mvuxfmekjpkf" path="res://Global/Scenes/navigation.tscn" id="29_3pijp"]

[node name="Investigation" type="Node2D" unique_id=1932357826]
script = ExtResource("1_30crl")

[node name="InvestigationBackground" type="Sprite2D" parent="." unique_id=410019762]
position = Vector2(960, 540)
texture = ExtResource("2_3pijp")

[node name="PerspectiveLabel" type="Label" parent="." unique_id=382526135]
offset_left = 1518.0
offset_top = 204.0
offset_right = 1894.0
offset_bottom = 357.0
theme_override_fonts/font = ExtResource("4_bseu4")
theme_override_font_sizes/font_size = 25
text = "Click on an item to learn more about the crime scene from this perspective."
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="MaskBackground" type="Sprite2D" parent="." unique_id=230060833]
position = Vector2(478.50003, 122.25001)
scale = Vector2(0.9710376, 0.9746048)
texture = ExtResource("3_30crl")

[node name="PerspectiveLabel" type="Label" parent="MaskBackground" unique_id=292821802]
offset_left = -349.3462
offset_top = 76.95611
offset_right = 58.65381
offset_bottom = 180.95612
theme_override_fonts/font = ExtResource("4_bseu4")
theme_override_font_sizes/font_size = 35
text = "Perspective: Anastasia"
vertical_alignment = 1

[node name="YellowMask" type="TextureButton" parent="MaskBackground" unique_id=1218781406]
offset_left = -307.40314
offset_top = -80.288956
offset_right = -127.40314
offset_bottom = 68.711044
toggle_mode = true
texture_normal = ExtResource("5_30crl")
texture_hover = ExtResource("6_3pijp")

[node name="RedMask" type="TextureButton" parent="MaskBackground" unique_id=987574359]
offset_left = -94.229126
offset_top = -61.819935
offset_right = 100.770874
offset_bottom = 75.18007
toggle_mode = true
texture_normal = ExtResource("7_3pijp")
texture_hover = ExtResource("8_aoddg")

[node name="BlueMask" type="TextureButton" parent="MaskBackground" unique_id=498339166]
offset_left = 152.92914
offset_top = -75.158676
offset_right = 330.92914
offset_bottom = 76.841324
toggle_mode = true
texture_normal = ExtResource("9_bseu4")
texture_hover = ExtResource("10_fupvy")

[node name="Time" parent="." unique_id=1807356104 instance=ExtResource("5_fupvy")]

[node name="Carpet" type="TextureButton" parent="." unique_id=751127875]
offset_left = 607.0
offset_top = 669.0
offset_right = 1919.0
offset_bottom = 887.0
texture_normal = ExtResource("12_30crl")
texture_hover = ExtResource("13_3pijp")
ignore_texture_size = true

[node name="InvestigationTable" type="Sprite2D" parent="." unique_id=142834941]
position = Vector2(1062, 704)
texture = ExtResource("8_4qb8l")

[node name="Cat" type="TextureButton" parent="." unique_id=1908573391]
offset_left = 1326.0
offset_top = 409.0
offset_right = 1664.0
offset_bottom = 821.0
texture_normal = ExtResource("15_aoddg")
texture_hover = ExtResource("16_bseu4")

[node name="Clock" type="TextureButton" parent="." unique_id=1926348022]
offset_left = 444.0
offset_top = 291.0
offset_right = 577.0
offset_bottom = 801.0
texture_normal = ExtResource("17_fupvy")
texture_hover = ExtResource("18_60yht")
ignore_texture_size = true
stretch_mode = 3

[node name="Mirror" type="TextureButton" parent="." unique_id=1328731782]
offset_left = 974.0
offset_top = 254.0
offset_right = 1149.0
offset_bottom = 461.0
texture_normal = ExtResource("19_08hgb")
texture_hover = ExtResource("20_4qb8l")
ignore_texture_size = true
stretch_mode = 3

[node name="Glass" type="TextureButton" parent="." unique_id=601018733]
offset_left = 1118.0
offset_top = 482.0
offset_right = 1247.0
offset_bottom = 645.0
texture_normal = ExtResource("21_h6tho")
texture_hover = ExtResource("22_p13pj")

[node name="Knife" type="TextureButton" parent="." unique_id=792329371]
offset_left = 884.0
offset_top = 538.0
offset_right = 1102.0
offset_bottom = 655.0
texture_normal = ExtResource("23_x05a8")
texture_hover = ExtResource("24_3gs6n")

[node name="Navigation" parent="." unique_id=1604309169 instance=ExtResource("29_3pijp")]
position = Vector2(-1, 4)

[node name="DescriptionBox" type="Sprite2D" parent="." unique_id=1962001080]
position = Vector2(960.5, 954)
scale = Vector2(1.0005208, 1)
texture = ExtResource("23_1xp5b")

[node name="Description" type="Label" parent="DescriptionBox" unique_id=755839354]
offset_left = -825.0209
offset_top = -77.0
offset_right = 733.1183
offset_bottom = 77.0
theme_override_fonts/font = ExtResource("4_bseu4")
theme_override_font_sizes/font_size = 32
vertical_alignment = 1
autowrap_mode = 3

[connection signal="toggled" from="MaskBackground/YellowMask" to="." method="_on_yellow_mask_toggled"]
[connection signal="toggled" from="MaskBackground/YellowMask" to="." method="_on_yelllow_mask_toggled"]
[connection signal="toggled" from="MaskBackground/RedMask" to="." method="_on_red_mask_toggled"]
[connection signal="toggled" from="MaskBackground/BlueMask" to="." method="_on_blue_mask_toggled"]
[connection signal="pressed" from="Carpet" to="." method="_on_carpet_pressed"]
[connection signal="pressed" from="Cat" to="." method="_on_cat_pressed"]
[connection signal="pressed" from="Clock" to="." method="_on_clock_pressed"]
[connection signal="pressed" from="Mirror" to="." method="_on_mirror_pressed"]
[connection signal="pressed" from="Glass" to="." method="_on_glass_pressed"]
[connection signal="pressed" from="Knife" to="." method="_on_knife_pressed"]
